--- a/proposal/related_work.ltx
+++ b/proposal/related_work.ltx
@@ -67,7 +67,12 @@ provided.
 
 
 \subsection{Determining semantic similarity among entity classes from different ontologies}
-\cite{Rodriguez2003}
+\citeauthor{Rodriguez2003} \cite{Rodriguez2003} describes different matching approaches for semantic similarity
+between entity classes from different ontologies.
+Word matching compares the number of common and different words in the synonym sets of entity classes.
+Feature matching uses common and different characteristics between objects or entities.
+Information content uses information theory to define a similarity measure in terms of the degree of 
+informativeness of the immediate superconcept that subsumes the two concepts being compared.
 
 \subsection{Learning to map between ontologies on the semantic web}
 \citeauthor{Doan2002} \cite{Doan2002} describe GLUE, a system using machine learning techniques for ontology 
@@ -85,9 +90,7 @@ ordinal values, feature vectors, words, and semantic similarity in taxonomies. A
 shows that the defined measure produces results of similar quality to domain-specific measurements.
 
 \subsection{A k-nearest neighbor based algorithm for multi-label classification}
-\cite{Zhang2015}
-
-\subsection{Concept Similarity Matching Based on Semantic Distance}
+\citeauthor{Zhang2015} \cite{Zhang2015}
 
 \section{Neural networks}
 
