--- a/proposal/related_work.ltx
+++ b/proposal/related_work.ltx
@@ -63,8 +63,18 @@ The problem of the thesis belongs to the task of ontology refinement, because an
 provided. 
 
 \subsection{Ontology Learning from Text: A Look Back and into the Future}
-\cite{Wong2012}
-
+\citeauthor{Wong2012} \cite{Wong2012} reviews the research in the field of ontology learning.\\
+First ontologies are defined. It is recognized that there are different types of ontologies. Ontologies
+divided between light- and heavyweight ontologies.Lightweight ontologies are more informal
+and don't make use of axioms. Taxonomies belong to the lightweight ontologies, and are described as
+''controlled vocabulary organized into a hierarchical or parent-child structure''.\\
+The following topics are also reviewed:
+\begin{itemize}
+\item Techniques of ontology learning.
+\item Evaluation approaches for ontology learning techniques.
+\item Prominent ontology learning systems.
+\item Advances in ontology learning.
+\end{itemize}
 
 \subsection{Determining semantic similarity among entity classes from different ontologies}
 \citeauthor{Rodriguez2003} \cite{Rodriguez2003} describes different matching approaches for semantic similarity
