Minor changes in proposal and related_work.

--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -252,7 +252,7 @@ year = {2009}
     year = {2005}
 }
 @misc{word2vec,
-  author = {Tomas Mikolov},
+  author = {Mikolov Tomas},
   title = {word2vec Project},
   year = {2013},
  howpublished  = {https://code.google.com/archive/p/word2vec/},
@@ -293,5 +293,18 @@ year = {2009}
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {machine learning, ontology mapping, relaxation labeling, semantic web},
-} 
-
+}
+@phdthesis{Weber2000,
+pages = {210},
+author = {Weber, Roger},
+school = {SWISS FEDERAL INSTITUTE OF TECHNOLOGY ZURICH},
+title = {{Similarity Search in High-Dimensional Vector Spaces}},
+year = {2000}
+}
+@misc{w3cowl2004,
+  author = {Bechhofer, Sean and van Harmelen, Frank and Hendler, Jim and Horrocks, Ian and McGuiness, Deborah L. Patel-Schneider, Peter F. and Stein, Lynn Andrea},
+  title = {OWL Reference - W3C Recommendation},
+  year = {2004},
+ howpublished  = {https://www.w3.org/TR/owl-ref/},
+  urldate = {2004-02-10}
+}
