--- a/proposal/related_work.ltx
+++ b/proposal/related_work.ltx
@@ -106,6 +106,12 @@ Multi-label classification may be relevant for thesis as each class can have mul
 k-nearest neighbors algorithms use distance or similarities measures to find the k-nearest neighbors
 and to assign weights to each neighbor based on its distance/similarity to the input vector.
 
+\subsection{Similarity Search in High-Dimensional Vector Spaces}
+\citeauthor{Weber2000} \cite{Weber2000} defines different distance and similarity measures.
+Aspects of similarity in high-dimensional vector space are analyzed.\\
+Word vectors are for example high-dimensional, so parts of the Weber's work may help for
+finding the right similarity measure.
+
 \section{Neural networks}
 
 \subsection{Using Recurrent Neural Network for Learning Expressive Ontologies}
